# MKProjectRandom

./: ..gitignore.un~  .gitignore  CMakeLists.txt  MKProjectRandom.pro  ScoresView.qml  TournamentView.qml  main.cpp  main.qml  mkpers.cpp  mkpers.h  persdata.cpp  persdata.h  persmodel.cpp  persmodel.h
android/: AndroidManifest.xml  gradle.properties  gradle.properties~
